homeworks/iyakovenko/module-03/lesson-08/02-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels: 
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata: 
      labels: 
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine 
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-host-storage
          mountPath: /data
      volumes:
      - name: redis-host-storage
        hostPath:
          path: /home/igyadmin/course-app/redis_data 
          type: DirectoryOrCreate
